--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,3 +1,3 @@
 eureka.client.serviceUrl.defaultZone:http://localhost:8080/eureka-server/
-eureka.client.registerWithEureka:false
-eureka.client.fetchRegistry:false
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
