--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,13 @@
-message=Hello ...!!!!!!!!!!!!!
+#MYSQL DB Properties
+#=====================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bankingapp
+spring.datasource.username=root
+spring.datasource.password=edgemysql4788
+
+#JPA Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
