--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #MYSQL DB Properties
 #=====================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/bankingapp
+spring.datasource.url=jdbc:mysql://localhost:3306/bankingapp
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=edgemysql4788
 
 #JPA Properties
 spring.jpa.hibernate.ddl-auto=update
