--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
+#RabbitMQ address
+spring.rabbitmq.addresses=amqps://ghvydrqq:mgDyY7LuROTO90F1sMqVoVPzLrRm-OuU@puffin.rmq2.cloudamqp.com/ghvydrqq
+
 #MYSQL DB Properties
 #=====================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
